fixed header z-index

--- a/Midterm/css/indexstyle.css
+++ b/Midterm/css/indexstyle.css
@@ -18,7 +18,7 @@ header {
     height: 50px;
     position: fixed;
     margin-top: -50px;
-    z-index: 10;
+    z-index: 50;
     border-bottom: 1px solid #d26e6e;
 }
 
@@ -94,7 +94,7 @@ div.container {
     height: 100%;
     overflow: hidden;
     position: relative;
-    background-color: blue;
+    /*background-color: blue;*/
 }
 
 .container img {
