--- a/Midterm/css/supportstyle.css
+++ b/Midterm/css/supportstyle.css
@@ -18,7 +18,7 @@ header {
     height: 50px;
     position: fixed;
     margin-bottom: -50px;
-    z-index: 10;
+    z-index: 50;
     border-bottom: 1px solid #d26e6e;
 }
 
